air/src/constraints/snapshots/miden_air__constraints__columns__tests__aead_stream_and8_col_map_layout.snap
---
source: air/src/constraints/columns.rs
expression: col_map!(AeadStreamAnd8Cols)
---
AeadStreamAnd8Cols {
    payload: [
        0,
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        18,
        19,
    ],
}
