air/src/constraints/snapshots/miden_air__constraints__columns__tests__aead_stream_low_second_col_map_layout.snap
---
source: air/src/constraints/columns.rs
expression: col_map!(AeadStreamLowSecondCols)
---
AeadStreamLowSecondCols {
    ctx: 0,
    clk: 1,
    src_ptr: 2,
    dst_ptr: 3,
    lane_base: 4,
    active_plaintext: 5,
    c_prev0: 6,
    c_prev1: 7,
    bytes: [
        8,
        9,
        10,
        11,
        12,
        13,
        14,
        15,
        16,
        17,
        18,
        19,
    ],
}
