air/src/constraints/snapshots/miden_air__constraints__columns__tests__bitwise_col_map_layout.snap
---
source: air/src/constraints/columns.rs
expression: col_map!(BitwiseCols)
---
BitwiseCols {
    op_flag: 0,
    a: 1,
    b: 2,
    a_bits: [
        3,
        4,
        5,
        6,
    ],
    b_bits: [
        7,
        8,
        9,
        10,
    ],
    prev_output: 11,
    output: 12,
}
